# heartale

./: main.py  pyproject.toml  readme.md  setup.py
.github/workflows/: main.yml  pylint.yml
data/: cool.ldr.heartale.desktop
data/scripts/: heartale  heartale_count
heartale/: __init__.py
heartale/servers/: __init__.py  legado.py  txt.py
heartale/tools/: __init__.py  cache.py  config.py  constant.py  count.py
heartale/tts/: __init__.py  coqui.py  edge.py  g_tts.py  ms_azure.py  paddle_speech.py
heartale/tts/fish/: __init__.py  commons.py  file.py
tools/: read.py
